<resources>
    <string name="app_name">ShoppingList</string>
    <string name="shoppinglist">ShoppingList</string>
    <string name="create_new_list">Create new list.</string>
    <string name="list_title">Title</string>
    <string name="list_values">Add to your list here</string>
    <string name="list_name">List Name:</string>
    <string name="name">Name</string>
    <string name="create_list">Create list</string>
    <string name="name_in">Name:</string>
    <string name="create">Create</string>
    <string name="success_create_list_msg">List Created</string>
    <string name="error_create_list_msg">Please enter a name</string>
    <string name="error_create_item_msg">Please enter a name</string>
    <string name="create_item">Create item</string>
    <string name="create2">Create</string>
    <string name="name2">name</string>
    <string name="addItem">Add Item</string>
    <string name="add">Add</string>
</resources>
