<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:text="@string/create_list"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:id="@+id/listNameText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:id="@+id/etListName" />

    <Button
        android:text="@string/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#6B6B69"
        android:layout_marginTop="10dp"
        android:id="@+id/create" />
</LinearLayout>